<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Titles -->
    <string name="app_name">GMA</string>
    <string name="title_activity_main">GMA</string>
    <string name="title_activity_join_ministry">Join Ministry</string>
    <string name="title_activity_splashactivity">Splash Screen</string>
    <string name="title_activity_map_settings">MapSettings</string>
    <string name="title_activity_measurements">Measurements</string>
    <string name="title_activity_measurement_details">Measurement Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_dialog_blocked">Blocked</string>

    <!-- Menu items -->
    <string name="menu_refresh">Refresh</string>

    <!-- Main Activity -->
    <string name="logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="reset">Reset</string>
    <string name="action_join_new_ministry">Join new ministry</string>
    <string name="search">Search</string>

    <!-- Join Ministry Activity -->
    <string name="ministry_team_label">Ministry/Team:</string>
    <string name="cancel_button">Cancel</string>
    <string name="join_button">Join</string>

    <!-- Church Details Fragment -->
    <string name="label_church_name">Name</string>
    <string name="label_church_contact_name">Contact Name</string>
    <string name="label_church_contact_email">Contact Email</string>
    <string name="label_church_development">Type</string>
    <string name="label_church_size">Size</string>
    <string name="button_church_create">Create</string>

    <!-- Training Details Fragment-->
    <string name="label_training_name">Name</string>
    <string name="label_training_type">Training Type</string>
    <string name="label_training_date">Date</string>

    <!-- Buttons -->
    <string name="ok">OK</string>
    <string name="update_button">Update</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="move">Move</string>

    <!-- Messages -->
    <string name="no_internet">No network connection detected</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="disallowed_measurements">You are not allowed to view measurements for this ministry</string>

    <!-- Map Settings -->
    <string name="map_settings">Map Settings</string>
    <string name="info">Show/Hide Icons</string>
    <string name="targets">Targets</string>
    <string name="groups">Groups</string>
    <string name="churches">Churches</string>
    <string name="multiplying_churches">Multiplying Churches</string>
    <string name="training_activities">Training Activities</string>
    <string name="campuses">Campuses</string>

    <!-- Measurements Activity -->
    <string name="ministry_name_placeholder">Ministry Name</string>
    <string name="period_placeholder">Period</string>
    <string name="period_left">"&#60;&#60;</string>
    <string name="period_right">&#62;&#62;</string>

    <!-- Measurement Details Graph -->
    <string name="action_measurement_details">Measurement Details</string>
    <string name="local">Local</string>
    <string name="team_members_title">Team Members</string>
    <string name="you_label">You</string>
    <string name="sub_team_ministries_header">Sub-Team/Ministries</string>

    <!-- login page -->
    <string name="Sing_in">Sign In</string>
    <string name="Sing_in_text">Hello wellcome to GMA APP</string>

</resources>
