<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.expidev.gcmapp.JoinMinistryActivity"
    android:padding="20dp"
    android:gravity="fill_vertical">


    <TextView
        android:text="@string/ministry_team_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elegantTextHeight="false"
        android:textSize="@dimen/abc_text_size_menu_material" />
    <AutoCompleteTextView
        android:id="@+id/ministry_team_autocomplete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:measureWithLargestChild="true">

        <Button
            android:id="@+id/ministry_join_button"
            android:text="@string/join_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="joinMinistry" />
        <Button
            android:id="@+id/ministry_cancel_button"
            android:text="@string/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:onClick="cancel" />

    </LinearLayout>

</LinearLayout>
